:tada: Added JA translations back in. Updated gallery lightbox. Fixed some alignment issues

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -175,11 +175,6 @@ button {
   transition: border-color 0.25s;
 }
 
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
 /* Special effect classes */
 .noise-overlay {
   position: fixed;
